--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,6 @@
   display: flex;
   flex-direction: column;
 }
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
 /* Header */
 .header-container {
@@ -72,6 +67,13 @@
 #shopping-cart-icon {
   cursor: pointer;
   width: 50px;
+}
+
+/* Home */
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Carousel */
