feat: add products page
also added a new font along with some  styling changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Lato', sans-serif;
+}
+
+body {
+  background-color: #e7dfd4;
 }
 
 /* App */
@@ -12,9 +18,10 @@
 /* Header */
 .header-container {
   padding: 5px 35px;
+  background-color: white;
   display: flex;
   flex-direction: column;
-  border-bottom: 5px solid #2f2e2c;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); /* Add box shadow to the bottom */
 }
 
 .upper-header {
@@ -126,11 +133,74 @@
 
 .see-now-link {
   text-decoration: none;
-  color: #d1cac2;
+  color: #a19f9c;
   transition: transform 0.3s ease, ease-in 0.3s color;
 }
 
 .see-now-link:hover {
   transform: translateX(5px);
   color: #588b8b;
+}
+
+/* Products */
+.products-container {
+  background-color: #e7dfd4;
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center; /* adjusted */
+  gap: 50px;
+}
+
+/* Product item */
+.product-container {
+  background-color: white;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  width: 450px;
+  height: 500px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#product-title {
+  font-size: 24px;
+  text-transform: uppercase;
+}
+
+.product-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  max-height: 250px;
+}
+
+.product-image img {
+  width: 100%;
+  height: 100%;
+}
+
+#add-to-cart-btn {
+  padding: 15px;
+  margin: 5px 0;
+  font-size: 16px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  border: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+#add-to-cart-btn:hover {
+  background-color: #588b8b;
+  color: white;
 }
