refactor: create error page as a component

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@ body {
   flex-direction: column;
 }
 
+/* Error page */
+.error-page-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Header */
 .header-container {
   padding: 5px 35px;
