chore: change style of product item

--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,11 @@ body {
 
 /* Product item */
 .product-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-info {
   background-color: white;
   padding: 5px;
   display: flex;
@@ -187,7 +192,7 @@ body {
   align-items: center;
   text-align: center;
   width: 450px;
-  height: 500px;
+  height: 400px;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -195,6 +200,10 @@ body {
 #product-title {
   font-size: 24px;
   text-transform: uppercase;
+}
+
+.product-price {
+  font-size: 48px;
 }
 
 .product-image {
@@ -221,6 +230,7 @@ body {
   background-color: black;
   color: white;
   cursor: pointer;
+  text-align: center;
   transition: all 0.2s;
 }
 
@@ -236,6 +246,10 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.cart-container h1 {
+  text-align: center;
 }
 
 .cart-container ul {
