--- a/src/App.css
+++ b/src/App.css
@@ -272,11 +272,11 @@ body {
   padding: 25px;
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
   background-color: white;
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .cart-item-image,
@@ -308,6 +308,19 @@ body {
   align-items: center;
   text-align: center;
   padding: 5px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  border: none;
+  border: 1px solid #a19f9c;
+  border-radius: 5px;
+  transition: all 0.2s;
+  font-size: 16px;
+}
+
+#decrement-btn:hover,
+#increment-btn:hover {
+  border: 1px solid black;
 }
 
 #product-quantity {
