--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
 
@@ -92,20 +93,39 @@ body {
   align-items: center;
 }
 
-/* Carousel */
-.carousel-container {
+/* Slideshow */
+.image-slider {
   position: relative;
   width: 100%;
-  height: 700px;
-  background-color: #2f2e2c;
+  max-height: 1000px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
-  text-align: center;
-  font-size: 48px;
+  justify-content: center;
+  overflow: hidden;
 }
 
+.slider-image {
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+#prev-slide {
+  left: 10px;
+}
+
+#next-slide {
+  right: 10px;
+}
 /* Section */
 .section-container {
   width: 90%;
